[package]
name = "fetch_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.5.1", features = ["neovim-0-10"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
fancy-regex = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.1"


